# simple-ai-agent

./: .gitignore  Cargo.toml  Makefile  README.md
docs/: create_db.md  e_commerce_tables_design.md  system_prompts.md
src/: agent.rs  config.rs  context.rs  errors.rs  lib.rs  llm.rs  main.rs  tool.rs
src/db/: desc_table.rs  execute_ddl.rs  execute_dml.rs  execute_query.rs  list_tables.rs  mod.rs  search_schema.rs  tools.rs
