[package]
name = "simple-pg-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-openai = { version = "0.41.1", features = [
    "assistant",
    "byot",
    "chat-completion",
    "completion-types",
    "completions",
    "rustls",
] }
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
dotenv = "0.15.0"
rand = "0.8.5"
rustyline = "18.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "json",
] }
termimad = "0.35.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
